--- a/csforsac/csforsac/templates/base.html
+++ b/csforsac/csforsac/templates/base.html
@@ -27,8 +27,10 @@
 
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">CSforSAC</a>
+        <nav class="navbar navbar-expand-md navbar-dark bg-black">
+            <a class="navbar-brand" href="#">
+              <img style="height:50px; width:50px" src="https://www.scoe.net/News/PublishingImages/2018/september/csforsac_logo%402x.jpg" alt="">
+              CSforSAC</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -73,6 +75,7 @@
               </ul>
             </div>
           </nav>
+          
         {% block content %}{% endblock %}
 
         {# Global javascript #}
