--- a/csforsac/csforsac/templates/base.html
+++ b/csforsac/csforsac/templates/base.html
@@ -47,12 +47,27 @@
                       <a class="dropdown-item" href="#">Blog</a>
                     </div>
                   </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      About
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="#">What is CS?</a>
+                      <a class="dropdown-item" href="#">Why CS Education?</a>
+                      <a class="dropdown-item" href="#">Research</a>
+                    </div>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Learn
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="#">Curriculum</a>
+                      <a class="dropdown-item" href="#">Summer of CS</a>
+                  </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Community of Practice
+                    Collaborate
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Elementary</a>
@@ -62,15 +77,15 @@
                     <a class="dropdown-item" href="#">Expanded Learning</a>
                   </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Professional Development</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Technical Assistance</a>
-                </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Support
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Teach CS!</a>
+                    <a class="dropdown-item" href="#">Standards and Framework</a>
+                    <a class="dropdown-item" href="#">Implementation</a>
                 </li>
               </ul>
             </div>
