--- a/csforsac/csforsac/templates/base.html
+++ b/csforsac/csforsac/templates/base.html
@@ -88,7 +88,10 @@
                       <a class="dropdown-item" href="#">Standards and Framework</a>
                       <a class="dropdown-item" href="#">Implementation</a>
                   </li>
-                </ul>
+                      <li class="nav-item">
+        		<a class="nav-link" href="/contact">Contact</a>
+      		      </li>
+		</ul>
               </div>
             </div>
           </nav>
