--- a/csforsac/home/templates/home/home_page.html
+++ b/csforsac/home/templates/home/home_page.html
@@ -2,7 +2,7 @@
 
 {% load wagtailcore_tags %}
 
-{% load wagtailimages_tages %}
+{% load wagtailimages_tags %}
 
 {% block body_class %}template-homepage{% endblock %}
 
