added the pages for everything except the blog, map, and calendar

--- a/csforsac/csforsac/templates/base.html
+++ b/csforsac/csforsac/templates/base.html
@@ -29,7 +29,7 @@
         {% wagtailuserbar %}
         <nav class="navbar navbar-expand-md navbar-dark bg-black fixed-top">
           <div class="container">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="/">
                 <img style="height:50px; width:50px" src="https://www.scoe.net/News/PublishingImages/2018/september/csforsac_logo%402x.jpg" alt="">
                 CSforSAC</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,9 +53,9 @@
                         About
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">What is CS?</a>
-                        <a class="dropdown-item" href="#">Why CS Education?</a>
-                        <a class="dropdown-item" href="#">Research</a>
+                        <a class="dropdown-item" href="/about">What is CS?</a>
+                        <a class="dropdown-item" href="/about">Why CS Education?</a>
+                        <a class="dropdown-item" href="/about">Research</a>
                       </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -63,17 +63,17 @@
                         Learn
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Curriculum</a>
-                        <a class="dropdown-item" href="#">Summer of CS</a>
+                        <a class="dropdown-item" href="/learn">Curriculum</a>
+                        <a class="dropdown-item" href="/learn">Summer of CS</a>
                     </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Collaborate
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">Elementary</a>
-                      <a class="dropdown-item" href="#">Middle School</a>
-                      <a class="dropdown-item" href="#">High School</a>
+                      <a class="dropdown-item" href="/collaborate">Elementary</a>
+                      <a class="dropdown-item" href="/collaborate">Middle School</a>
+                      <a class="dropdown-item" href="/collaborate">High School</a>
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="#">Expanded Learning</a>
                     </div>
@@ -84,9 +84,9 @@
                       Support
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">Teach CS!</a>
-                      <a class="dropdown-item" href="#">Standards and Framework</a>
-                      <a class="dropdown-item" href="#">Implementation</a>
+                      <a class="dropdown-item" href="/support">Teach CS!</a>
+                      <a class="dropdown-item" href="/support">Standards and Framework</a>
+                      <a class="dropdown-item" href="/support">Implementation</a>
                   </li>
                       <li class="nav-item">
         		<a class="nav-link" href="/contact">Contact</a>
