--- a/csforsac/csforsac/templates/base.html
+++ b/csforsac/csforsac/templates/base.html
@@ -17,6 +17,9 @@
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+		<!--  Favicon	-->
+		<link rel="shortcut icon" href="/media/images/favicon.original.png"/>
+		
         {# Global stylesheets #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/csforsac.css' %}">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
