added the transparent icon to the navbar, it is also editable

--- a/csforsac/csforsac/templates/base.html
+++ b/csforsac/csforsac/templates/base.html
@@ -33,7 +33,7 @@
         <nav class="navbar navbar-expand-md navbar-dark bg-black fixed-top">
 
               <a class="navbar-brand" href="/">
-                <img style="height:50px; width:50px" src="https://www.scoe.net/News/PublishingImages/2018/september/csforsac_logo%402x.jpg" alt="">
+                <img style="height:50px; width:50px" src="/media/images/CSforSAC_Transparent.max-165x165.png" alt="">
                 CSforSAC</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -98,9 +98,10 @@
               </div>
 
           </nav>
-          
-        {% block content %}{% endblock %}
+        
 
+        {% block content %}{% endblock %}
+ 
         {# Global javascript #}
         <script type="text/javascript" src="{% static 'js/csforsac.js' %}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
