--- a/csforsac/home/templates/home/home_page.html
+++ b/csforsac/home/templates/home/home_page.html
@@ -10,111 +10,94 @@
 
 {% image page.photo original %}
 
-    <!-- <div class="container"> 
-        
-    </div>
+<main role="main" >
 
-    <div class="container">
-        {{ page.extra|richtext }}
-    </div>
-    
-    <div class="container">
-        {{ page.more|richtext }}
-    </div> -->
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+   <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+   </ol>
+   <div class="carousel-inner">
+      <div class="carousel-item active">
+         <img class="first-slide" src="https://picsum.photos/800/203" alt="First slide">
+         <div class="container">
+            <div class="carousel-caption text-left">
+               <h1>{{ page.carousel_1_header }}</h1>
+               <p>{{ page.carousel_1_body }}</p>
+            </div>
+         </div>
+      </div>
+      <div class="carousel-item">
+         <img class="second-slide" src="https://picsum.photos/800/201" alt="Second slide">
+         <div class="container">
+            <div class="carousel-caption text-left">
+               <h1>{{ page.carousel_2_header }}</h1>
+               <p>{{ page.carousel_2_body }}</p>
+            </div>
+         </div>
+      </div>
+      <div class="carousel-item">
+         <img class="third-slide" src="https://picsum.photos/800/202" alt="Third slide">
+         <div class="container">
+            <div class="carousel-caption text-left">
+               <h1>{{ page.carousel_3_header }}</h1>
+               <p>{{ page.carousel_3_body }}</p>
+            </div>
+         </div>
+      </div>
+   </div>
+   <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+   <span class="sr-only">Previous</span>
+   </a>
+   <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+   <span class="carousel-control-next-icon" aria-hidden="true"></span>
+   <span class="sr-only">Next</span>
+   </a>
+</div>
 
 
-    <main role="main">
+<div class="container">
+	<!-- START THE FEATURETTES -->
 
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
-                  <div class="container">
-                    <div class="carousel-caption text-left">
-                      <h1>{{ page.carousel_1_header }}</h1>
-                      <p>{{ page.carousel_1_body }}</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
-                  <div class="container">
-                    <div class="carousel-caption text-left">
-                      <h1>{{ page.carousel_2_header }}</h1>
-                      <p>{{ page.carousel_2_body }}</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
-                  <div class="container">
-                    <div class="carousel-caption text-left">
-                      <h1>{{ page.carousel_3_header }}</h1>
-                      <p>{{ page.carousel_3_body }}</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>      
-      
-              <!-- START THE FEATURETTES -->
-      
-              <hr class="featurette-divider">
-      
-              <div class="row featurette">
-                <div class="col-md-7">
-                  <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-                  <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-                </div>
-                <div class="col-md-5">
-                  <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-                </div>
-              </div>
-      
-              <hr class="featurette-divider">
-      
-              <div class="row featurette">
-                <div class="col-md-7 order-md-2">
-                  <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-                  <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-                </div>
-                <div class="col-md-5 order-md-1">
-                  <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-                </div>
-              </div>
-      
-              <hr class="featurette-divider">
-      
-              <div class="row featurette">
-                <div class="col-md-7">
-                  <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-                  <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-                </div>
-                <div class="col-md-5">
-                  <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-                </div>
-              </div>
-      
-              <hr class="featurette-divider">
-      
-              <!-- /END THE FEATURETTES -->
-      
-            </div><!-- /.container -->
-      
-      
+	<hr class="featurette-divider">
+	<div class="row featurette wow bounceInRight">
+	   <div class="col-md-7">
+	      <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
+	      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+	   </div>
+	   <div class="col-md-5">
+	      <img class="featurette-image img-fluid mx-auto" src="https://picsum.photos/503" alt="Generic placeholder image">
+	   </div>
+	</div>
+	<hr class="featurette-divider">
+	<div class="row featurette wow bounceInLeft">
+	   <div class="col-md-7 order-md-2">
+	      <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
+	      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+	   </div>
+	   <div class="col-md-5 order-md-1">
+	      <img class="featurette-image img-fluid mx-auto" src="https://picsum.photos/500/701" alt="Generic placeholder image">
+	   </div>
+	</div>
+	<hr class="featurette-divider">
+	<div class="row featurette wow bounceInRight">
+	   <div class="col-md-7">
+	      <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+	      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+	   </div>
+	   <div class="col-md-5">
+	      <img class="featurette-image img-fluid mx-auto" src="https://picsum.photos/600/501" alt="Generic placeholder image">
+	   </div>
+	</div>
+	<hr class="featurette-divider">
+	
+
+	<!-- /END THE FEATURETTES -->
+	</div><!-- /.container -->
+	      
+
 
 
 {% endblock %}
