--- a/csforsac/home/templates/home/about_page.html
+++ b/csforsac/home/templates/home/about_page.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
-{% load static %}
 
+{% load static %}
 {% load wagtailcore_tags %}
 
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
+
+<link rel="stylesheet" href="{% static 'css/about_page.css' %} ">
 
 <main role="main">
 
