--- a/csforsac/home/templates/home/about_page.html
+++ b/csforsac/home/templates/home/about_page.html
@@ -11,7 +11,10 @@
 
 <main role="main">
 
-    <div class="container"> TODO: fix top padding
+    <div class="container" id="about"> TODO: fix top padding
+        <div id="about-title">
+            <h1>Computer Science in the Greater Sacramento Area</h1>
+        </div>
         <div class="col-lg" id="quote1">
             <!-- <h3>{{ page.quote1 }}</h3> -->
             <h3>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
@@ -25,7 +28,7 @@
                     tempor incididunt ut labore et dolore magna aliqua."
                 </h3>
             </div>
-            <div class="col-4" id="quote1-img">
+            <div class="col-4" id="quote2-img">
                 <img class="img-fluid" src="https://picsum.photos/503" alt="Generic placeholder image">
             </div>
         </div>
@@ -84,6 +87,28 @@
           </div>
       </div>
     </div>
+
+<!-- divider -->
+<div>
+    <div style="height:20px; overflow:hidden; width: 100%;"></div>
+        <hr class="styled-hr" style="width:100%;">
+    <div style="height:20px; overflow:hidden; width: 100%;"></div>
+</div>
+
+<!-- What is Computer Science -->
+<div class="container" id="what-is-cs">
+    <div class="row" id="quote-row">
+        <div class="col-8" id="quote2">
+            <!-- <h3>{{ page.quote2 }}</h3> -->
+            <h3>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                tempor incididunt ut labore et dolore magna aliqua."
+            </h3>
+        </div>
+        <div class="col-4" id="quote1-img">
+            <img class="img-fluid" src="https://picsum.photos/503" alt="Generic placeholder image">
+        </div>
+    </div>
+</div>
 
 <!-- divider -->
 <div>
