--- a/csforsac/home/templates/home/home_page.html
+++ b/csforsac/home/templates/home/home_page.html
@@ -87,7 +87,7 @@
 	      <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
 	      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 	   </div>
-	   <div class="col-md-5">
+	   <div id="test" class="col-md-5">
 	      <img class="featurette-image img-fluid mx-auto" src="https://picsum.photos/600/501" alt="Generic placeholder image">
 	   </div>
 	</div>
@@ -96,8 +96,44 @@
 
 	<!-- /END THE FEATURETTES -->
 	</div><!-- /.container -->
-	      
+	<div class="element"></div>
+	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+var typed = new Typed('.element', {
+  strings: ["First sentence.", "Second sentence."],
+  typeSpeed: 30
+});
 
+
+// to top right away
+if ( window.location.hash ) scroll(0,0);
+// void some browsers issue
+setTimeout( function() { scroll(0,0); }, 1);
+
+    // your current click function
+    $('.scroll').on('click', function(e) {
+        e.preventDefault();
+        $('html, body').animate({
+            scrollTop: $($(this).attr('href')).offset().top + 'px'
+        }, 1000, 'swing');
+    });
+
+$(function() {
+
+
+
+    // *only* if we have anchor on the url
+    if(window.location.hash) {
+
+        // smooth scroll to the anchor id
+        $('html, body').animate({
+            scrollTop: $(window.location.hash).offset().top + 'px'
+        }, 1000, 'swing');
+    }
+
+});
+	</script>
 
 
 {% endblock %}
