--- a/csforsac/csforsac/templates/base.html
+++ b/csforsac/csforsac/templates/base.html
@@ -54,7 +54,7 @@
                       <div class="dropdown-menu " aria-labelledby="navbarDropdown">
                         <a class="dropdown-item hvr-grow" href="#">Map</a>
                         <a class="dropdown-item hvr-grow" href="#">Calendar</a>
-                        <a class="dropdown-item hvr-grow" href="#">Blog</a>
+                        <a class="dropdown-item hvr-grow" href="/blog-listing">Blog</a>
                       </div>
                     </li>
                     <li class="nav-item dropdown">
