--- a/csforsac/blog/templates/blog/blog_listing_page.html
+++ b/csforsac/blog/templates/blog/blog_listing_page.html
@@ -1,26 +1,21 @@
 {% extends "base.html" %}
 
 {% block content %}
-<!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-    </head>
-    <body>
 
         
         <div class="jumbotron"> 
-            <h1 class='display-4'>This is some text</h1>
-            <p> {{ context.title }} </p>
+            <h1 class='display-4'>CSforSAC Blog Listing</h1>
         </div>
 
-        {% for blog in blog_list%}
-            <h1> {{ context. }}</h>
-            <p>By {{ blog.author }}</p>
-            <p>By {{ blog.content }}</p>
+        {% for article in articles%}
+                <div class = 'Container'>
+                        <h1 class='display-4'>{{ article.title |safe }} </h>
+                    <p>
+                        {{article.content |safe}}
+                    </p>
+
+                </div>
+            
         {% endfor %}
-    </body>
-</html>
-
-
+ 
 {% endblock %}
