added "..." for displaying at the end of the summaries in the blog list page

--- a/csforsac/blog/templates/blog/blog_listing_page.html
+++ b/csforsac/blog/templates/blog/blog_listing_page.html
@@ -29,7 +29,7 @@
                     <a href="{{ blog.url }}">
                         <h4 style=" ">{{ blog.custom_title }}</h3>
                     </a>
-                    <P> {{ blog.blog_summary }} </p>
+                    <P> {{ blog.blog_summary }}... </p>
                     <a href="{{ blog.url }}" class="btn btn-primary mt-4">See Article</a>
                 </div>
 
