--- a/csforsac/blog/templates/blog/blog_focus_page.html
+++ b/csforsac/blog/templates/blog/blog_focus_page.html
@@ -5,7 +5,7 @@
 
 
 {% block content %}
-    {% image self.article_image fill-1200x300 as header_image %}
+    {% image self.article_image height-280 as header_image %}
 
     <p> </p>
     <div class='container'>
@@ -13,7 +13,12 @@
     </div>
     <p> </p>
     <div class='container'>
-        <img src='{{header_image.url}}' alt="{{ header_image.alt }}" style='width: 100%; height: auto;'>
+        <img src='{{header_image.url}}' alt="{{ header_image.alt }}" style='{{ header_image.width }}'>
+
+        {% for block in required_content %}
+            {% include_block block %}
+
+        {% endfor %}
 
         {% for block in page.content %}
             {% include_block block %}
