added: LeftSmMediaBlock AltSmMediaBlock AltLrgMediaBlock FreeCarouselBlock 	PLUS some HTML and bootstrap for all these 	And some place holders for other ideas for blocks for streamfields. AND Added a BasicPage for all these new streamfields in the blog app. Commented out generic page in home/Models.py. home/models.py  seems to have database problems that the blog app doesn't have.

--- a/csforsac/blog/templates/blog/blog_focus_page.html
+++ b/csforsac/blog/templates/blog/blog_focus_page.html
@@ -15,16 +15,19 @@
     <div class='container'>
         <img src='{{header_image.url}}' alt="{{ header_image.alt }}" style='{{ header_image.width }}'>
 
-        {% for block in required_content %}
+        {% for block in self.content %}
             {% include_block block %}
-
-        {% endfor %}
-
-        {% for block in page.content %}
-            {% include_block block %}
-
         {% endfor%}
 
+        <!--This is an example of how to add content in a dynamic way
+        Just call self.NameOfYourContent whereever you'd like to put 
+        it and you can style it how you'd like-->
+        {% comment %}         
+            <div> stuff </div>
+            {% for block in self.contentTwo %}
+                {% include_block block %}
+            {% endfor%} 
+        {% endcomment %}
     </div>
 
 {% endblock %}
